# Subliquid

./: .gitignore  .npmrc  .vercelignore  README.md  package.json  vercel.json
apps/web/: .env.production  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  vercel.json
apps/web/src/app/: globals.css  layout.tsx  metadata.ts  page.tsx
apps/web/src/app/dashboard/: layout.tsx  page.tsx
apps/web/src/components/: Footer.tsx  Hero.tsx  MintForm.tsx  TokenBalance.tsx  TransactionHistory.tsx  TransferForm.tsx  WalletConnect.tsx
apps/web/src/lib/: client-only.tsx  contract-abi.ts  contract.ts  wallet-context.tsx
contracts/subliquid-token/: Cargo.toml  lib.rs
